css/default.css
/*******************************************************************************
 * Copyright (c) 2012, 2015 EclipseSource and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *    EclipseSource - initial API and implementation
 ******************************************************************************/

/* Default theme for all widgets */

* {
  color: #4a4a4a;
  background-color: #fff;
  background-image: none;
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
}

*:disabled {
  color: #CFCFCF;
}

Widget-Badge {
  background-color: #dd0000;
  border: none;
  border-radius: 10px;
  font: 10px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #ffffff;
}

Widget-ToolTip {
  padding: 10px;
  background-color: rgb(32, 31, 27);
  background-image: none;
  border: none;
  border-radius: 1px;
  font: 12px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #e0e0e0;
  opacity: 0.9;
  animation: fadeIn 150ms ease-in, fadeOut 150ms ease-in;
  box-shadow: none;
  text-align: center;
}

Widget-ToolTip-Pointer {
  background-image: none;
}

Widget-ToolTip-Pointer:up {
  background-image : url( resource/widget/rap/arrows/tooltip-up.png );
}

Widget-ToolTip-Pointer:down {
  background-image : url( resource/widget/rap/arrows/tooltip-down.png );
}

Widget-ToolTip-Pointer:left {
  background-image : url( resource/widget/rap/arrows/tooltip-left.png );
}

Widget-ToolTip-Pointer:right {
  background-image : url( resource/widget/rap/arrows/tooltip-right.png );
}

Display {
  rwt-shadow-color: #a7a6aa;
  rwt-highlight-color: #ffffff;
  rwt-darkshadow-color: #85878c;
  rwt-lightshadow-color: #dcdfe4;
  rwt-thinborder-color: #aca899;
  rwt-selectionmarker-color: #fec83c;
  rwt-infobackground-color: #ffffff;

  rwt-error-image: url( resource/widget/rap/dialog/error.png );
  rwt-information-image: url( resource/widget/rap/dialog/information.png );
  rwt-question-image: url( resource/widget/rap/dialog/question.png );
  rwt-warning-image: url( resource/widget/rap/dialog/warning.png );
  rwt-working-image: url( resource/widget/rap/dialog/information.png );

  rwt-fontlist: 14px 'Segoe UI', Corbel, Calibri, Tahoma, 'Lucida Sans Unicode';

  background-image: url( resource/widget/rap/display/browser_bg.png );
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
}

SystemMessage-DisplayOverlay {
  background-color: rgba( 128, 128, 128, 0.2 );
  background-image: url( resource/widget/rap/display/loading.gif );
}

/* Default theme for all controls */

* {
  border: none;
  padding: 0px;
}

*[BORDER] {
  border: 1px solid #a4a4a4;
}

/* Default theme for all composites */

Composite {
  padding: 0;
  opacity: 1;
  background-color: #ffffff;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  border: none;
  box-shadow: none;
  animation: none;
}

Composite[BORDER] {
  border: 1px solid #bdbdbd;
  border-radius: 2px;
}

/* Button default theme */

Button {
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  border: none;
  border-radius: 2px;
  padding: 6px 15px;
  spacing: 2px;
  cursor: default;
  animation: none;
  color: #4a4a4a;
  background-color: #ffffff;
  opacity: 1;
  text-shadow: none;
  box-shadow: none;
  text-decoration: none;
  box-shadow: none;
}

Button[PUSH],
Button[TOGGLE],
Button[PUSH][BORDER],
Button[TOGGLE][BORDER],
Button[PUSH][FLAT],
Button[TOGGLE][FLAT] {
  border: 1px solid #bdbdbd;
  border-radius: 2px;
  padding: 6px 15px;
  background-image: gradient(
    linear, left top, left bottom,
    from( #f9f9f9 ),
    to( #e4e4e4 )
  );
  animation: none;
  cursor: pointer;
  text-shadow: 0 1px 0 #ffffff;
}

Button[ARROW],
Button[ARROW][BORDER],
Button[ARROW][FLAT] {
  border: 1px solid #bdbdbd;
  border-radius: 2px;
  padding: 10px;
  background-image: gradient(
    linear, left top, left bottom,
    from( #f9f9f9 ),
    to( #e4e4e4 )
  );
  cursor: pointer;
}

Button[ARROW]:default,
Button[PUSH]:default,
Button[TOGGLE]:default {
  background-color: #416693;
  background-image: gradient(
    linear, left top, left bottom,
    from( #e2eefc ),
    to( #d4d4d4 )
  );
  border: 1px solid #a0b3ca;
}

Button[ARROW]:disabled,
Button[PUSH]:disabled,
Button[TOGGLE]:disabled,
Button[TOGGLE]:selected:disabled {
  cursor: default;
  color: #d2d2d2;
  background-image: none;
  background-color: #fafafa;
  border: 1px solid #d2d2d2;
}

Button[ARROW]:hover,
Button[PUSH]:hover,
Button[TOGGLE]:hover {
  background-image: gradient(
    linear, left top, left bottom,
    from( #eaeaea ),
    to( #d5d5d5 )
  );
}

Button[ARROW]:pressed,
Button[PUSH]:pressed,
Button[TOGGLE]:pressed {
  background-image: gradient(
    linear, left top, left bottom,
    from( #d5d5d5 ),
    to( #eaeaea )
  );
}

Button[TOGGLE]:selected {
  background-image: gradient(
    linear, left top, left bottom,
    from( #d5d5d5 ),
    to( #eaeaea )
  );
}

Button[TOGGLE]:selected:hover {
  background-image: gradient(
    linear, left top, left bottom,
    from( #d5d5d5 ),
    to( #eaeaea )
  );
}

Button[CHECK],
Button[RADIO] {
  padding: 3px 3px 3px 0;
  spacing: 7px;
}

Button[CHECK][BORDER],
Button[RADIO][BORDER] {
  cursor: default;
  background-image: none;
  border: 1px solid #bdbdbd;
  border-radius: 2px;
}

Button-CheckIcon {
  background-image: url( resource/widget/rap/button/check-unselected.png );
}

Button-CheckIcon:hover {
  background-image: url( resource/widget/rap/button/check-unselected-hover.png );
}

Button-CheckIcon:selected {
  background-image: url( resource/widget/rap/button/check-selected.png );
}
/* ... */

